--- a/index.html
+++ b/index.html
@@ -685,7 +685,7 @@ ipsum dolor amet</multiline></td>
 	  
       <tr>
        <td valign="top" style="padding-top:40px;">
-        <table align="center" border="0" cellpadding="0" cellspacing="0" class="table-inner" width="640"">		
+        <table align="center" border="0" cellpadding="0" cellspacing="0" class="table-inner" width="640">		
 		
       <tr>
        <td valign="top">
